--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BOT_TOKEN=your_telegram_bot_token
-BOT_ADMINS=123456789,987654321
+BOT_TOKEN=5389346434:AAGNrV9kKnA_vT1DBnqXqpwmPZYDvEGhT5o
+BOT_ADMINS=1038786362
 POLLING_INTERVAL=60  # Frequency to poll Bybit API in seconds
 LOG_LEVEL=INFO  # Can be DEBUG or INFO 
